modules/web-instance/security-group.tf
resource "aws_security_group" "allow_web" {
  name        = "allow_web-${var.env}"
  description = "Allow Web Access"
  vpc_id      = var.vpc_id

  ingress {
    description      = "SSH fom Public"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "Web fom Public"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    description      = "Internet Access"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "demo-sg-${var.env}"
  }
}
